[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "petasus"
authors = [
    {name = "William E. Fondrie", email = "wfondrie@talus.bio"},
    {name = "J. Sebastian Paez", email = "spaez@talus.bio"},
    {name = "Carolyn Allen", email = "callen@talus.bio"},
]
description = "Utilties for working with DDA search results from Sage and Comet."
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "click",
    "loguru",
    "polars",
    "pyteomics",
    "lxml",
    "numpy",
    "numba",
    "pyarrow",
    "hdf5plugin>=3.10.0",
    "ms2ml @ git+https://github.com/wfondrie/ms2ml.git@encyclopedia-update"
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/TalusBio/search2dlib"

[project.optional-dependencies]
dev = [
    "pre-commit>=2.7.1",
]

[project.scripts]
petasus = "petasus.petasus:cli"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]

[tool.ruff]
select = ["E", "F", "T20"]  # T20 is for print() statements.

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
